@@ -4,7 +4,7 @@
  * Any other distribution or use of this source violates copyright.
 */
 const char *r72_cell_spe_wrapper_cpp(void) {
-return "@(#)$Id: r72-cell-spe-wrapper.c,v 1.1.2.3 2008/05/18 15:36:41 stream Exp $"; }
+return "@(#)$Id: r72-cell-spe-wrapper.c,v 1.1.2.4 2008/08/17 05:04:53 stream Exp $"; }
 
 #ifndef CORE_NAME
 #error CORE_NAME not defined
@@ -28,12 +28,22 @@ CellR72CoreArgs myCellR72CoreArgs __attribute__((aligned (128)));
 
 int main(unsigned long long speid, addr64 argp, addr64 envp)
 {
+  STATIC_ASSERT(sizeof(RC5_72UnitWork) == 44);
+  STATIC_ASSERT(sizeof(CellR72CoreArgs) == 64);
+  STATIC_ASSERT(offsetof(CellR72CoreArgs, signature) == 48);
+
   // One DMA used in program
   mfc_write_tag_mask(1<<DMA_ID);
 
   // Fetch arguments from main memory
   mfc_get(&myCellR72CoreArgs, argp.a32[1], sizeof(CellR72CoreArgs), DMA_ID, 0, 0);
   mfc_read_tag_status_all();
+
+  /*
+  if (myCellR72CoreArgs.signature != CELL_RC5_72_SIGNATURE)
+    printf("!!! RC5 !!! NO SIGNATURE !!!\n");
+  myCellR72CoreArgs.signature = 0;
+  */
 
   // Prepare arguments to be passed to the core
   RC5_72UnitWork* rc5_72unitwork = &myCellR72CoreArgs.rc5_72unitwork;
