@@ -6,9 +6,15 @@
 
 typedef struct
 {
-  RC5_72UnitWork rc5_72unitwork;
-  u32 iterations;
+  RC5_72UnitWork rc5_72unitwork;  /* 44 bytes */
+  u32 iterations;                 /* 48 bytes */
+  u32 signature;                  /* 52 bytes */
+  u32 pad1, pad2, pad3;           /* pad to 16 */
 } CellR72CoreArgs;
+
+#define CELL_RC5_72_SIGNATURE  0x98765432
+
+#define STATIC_ASSERT(foo)  { typedef int footype[(foo) ? 1 : -1]; }
 
 typedef union {
     ui64 a64;
