@@ -23,13 +23,14 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.127 2008/07/17 13:34:30 stream Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.128 2008/08/17 05:11:23 stream Exp $
 ==========================================================================
 
 2.9000
 ------
 2.9016-506  new: x86: added new RC5-72 core (GO 2-pipe alt), selected for
                       P4 and Core Duo CPUs.
+            fix: cellbe: Workaround for broken SPU scheduler (#4038)
 
 2.9015-505  fix: cellbe: Memory corruption in OGR core (#4036)
             imp: x86: CPU Identification
